Groundwork for automating BT Face Dancer reveals (#1095)